Refactor index.html for improved layout and support info
Updated HTML structure and styling for better layout and readability.

--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
-index.html
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>AnchorPresenter Support</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; max-width: 800px; margin: 40px auto; padding: 20px; line-height: 1.6; }
-        h1 { margin-bottom: 10px; }
-        h2 { margin-top: 30px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AnchorPresenter Support</title>
+  <style>
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 0 20px; line-height: 1.6; }
+    h1 { margin: 0 0 10px; }
+    .card { border: 1px solid #ddd; border-radius: 10px; padding: 16px 18px; margin: 16px 0; }
+    code { background: #f4f4f4; padding: 2px 6px; border-radius: 6px; }
+  </style>
 </head>
 <body>
+  <h1>AnchorPresenter Support</h1>
+  <p>Thanks for using AnchorPresenter. If you need help, have a feature request, or want to report an issue, contact:</p>
 
-<h1>AnchorPresenter Support</h1>
+  <div class="card">
+    <p><strong>Support Email:</strong> <a href="mailto:YOUR_EMAIL_HERE">YOUR_EMAIL_HERE</a></p>
+  </div>
 
-<p>Thank you for using AnchorPresenter.</p>
+  <h2>FAQ</h2>
 
-<p>If you need assistance, have a feature request, or want to report an issue, please contact:</p>
+  <div class="card">
+    <p><strong>How do I import PowerPoint or PDF files?</strong><br>
+    Use the Import feature to add <code>.ppt</code>, <code>.pptx</code>, <code>.pdf</code>, images, or video files directly.</p>
+  </div>
 
-<p><strong>Email:</strong> support@yourdomain.com</p>
+  <div class="card">
+    <p><strong>Can I use background video or images?</strong><br>
+    Yes — AnchorPresenter supports background video and background images for presentations.</p>
+  </div>
 
-<h2>Frequently Asked Questions</h2>
+  <div class="card">
+    <p><strong>How do I import Bible JSON?</strong><br>
+    Use the Bible import option in the app to load supported Bible JSON files.</p>
+  </div>
 
-<p><strong>How do I import PowerPoint or PDF files?</strong><br>
-Use the Import feature inside the app to add .ppt, .pptx, .pdf, images, or video files.</p>
+  <div class="card">
+    <p><strong>How do I use multi-screen output?</strong><br>
+    Connect your external display before starting presentation mode for best results.</p>
+  </div>
 
-<p><strong>How do I import Bible JSON?</strong><br>
-Use the Bible import option within Settings to load supported JSON files.</p>
-
-<p><strong>How do I use multi-screen output?</strong><br>
-Connect your external display before starting presentation mode for best results.</p>
-
-<p>AnchorPresenter is built for churches and worship services to provide smooth and distraction-free presentation.</p>
-
+  <p style="margin-top: 28px; color: #666;">© AnchorPresenter</p>
 </body>
 </html>
+
